"you.. canNOT.. BEAT. US."
- FINALLY. WHAT IVE BEEN ASKING FOR!! FUCK YOU JAVASCRIPT HAHAHAHAHAHA!!!1!! (you can now directly insert values in strings instead of having to use the + operator over and over)
- two new files for logs and config
- added a method for obtaining file data